--- a/lessons/02-layers.Rmd
+++ b/lessons/02-layers.Rmd
@@ -1,16 +1,13 @@
-# Layers {-}
-
+# Layers 
+https://r-graphics.org/recipe-bar-graph-labels
 ```{r}
 # set global options
 source("_common.R")
 ```
 
-## Introduction {-}
+## Introduction 
 
-In [the last chapter][sec-visualize], you learned much more than just how to make scatterplots, bar charts, and boxplots.
-You learned a foundation that you can use to make *any* type of plot with ggplot2.
-
-In this chapter, you'll expand on that foundation as you learn about the layered grammar of graphics.
+In this chapter, you'll expand on your ggplot2 foundation as you learn about the layered grammar of graphics.
 We'll start with a deeper dive into aesthetic mappings, geometric objects, and facets.
 Then, you will learn about statistical transformations ggplot2 makes under the hood when creating a plot.
 These transformations are used to calculate new values to plot, such as the heights of bars in a bar plot or medians in a box plot.
@@ -18,24 +15,33 @@ You will also learn about position adjustments, which modify how geoms are displ
 
 We will not cover every single function and option for each of these layers, but we will walk you through the most important and commonly used functionality provided by ggplot2 as well as introduce you to packages that extend ggplot2.
 
-### Prerequisites {-}
+### Prerequisites 
 
 This chapter focuses on ggplot2.
-To access the datasets, help pages, and functions used in this chapter, load the tidyverse and the patchwork packages by running this code:
+To access the datasets, help pages, and functions used in this chapter, first install the packages `patchwork` and `ggridges` if you need to by uncommenting this code: 
 
-```{r echo = FALSE}
+
+```{r}
+
+# install.packages(c("patchwork","ggridges"))
+
+```
+
+Then load the `tidyverse` and the `patchwork` packages by into your session:
+
+```{r}
 library(tidyverse)
 library(patchwork)
 ```
 
-## Aesthetic mappings {-}
+## Aesthetic mappings 
 
 > "The greatest value of a picture is when it forces us to notice what we never expected to see." --- John Tukey
 
 The `mpg` data frame is bundled with the ggplot2 package and contains `r nrow(mpg)` observations on `r mpg %>% distinct(model) %>% nrow()` car models.
 
 ```{r}
-#?mpg
+?mpg
 
 nrow(mpg)
 
@@ -67,9 +73,30 @@ We can do this with a scatterplot where the numerical variables are mapped to th
 #|   except for suv. Each plot comes with a legend that shows the 
 #|   mapping between color or shape and levels of the class variable.
 
-ggplot(mpg, aes(x = displ, y = hwy, color = class)) +
-  geom_point() + ggplot(mpg, aes(x = displ, y = hwy, shape = class)) +
-  geom_point() + plot_layout(nrow = 2)
+ggplot(mpg, aes(x = displ, y = hwy, color = class)) + geom_point() + ggplot(mpg, aes(x = displ, y = hwy, shape = class)) + geom_point() + plot_layout(nrow = 2)
+```
+
+Note the use of `plot_layout` from the `patchwork` package to layout the plots in two rows. You can also use mathematical symbols to layout ggplots:
+
+Use `+` to plot them side-by-side:
+```{r}
+ggplot(mpg, aes(x = displ, y = hwy, color = class)) + geom_point() + ggplot(mpg, aes(x = displ, y = hwy, shape = class)) + geom_point() 
+```
+
+Use '/' to plot them in one column:
+```{r}
+(ggplot(mpg, aes(x = displ, y = hwy, color = class)) + geom_point() )/ (ggplot(mpg, aes(x = displ, y = hwy, shape = class)) + geom_point())
+```
+
+Notice that parentheses are required for this operation unless you first save the plots:
+
+```{r}
+p1 <- ggplot(mpg, aes(x = displ, y = hwy, color = class)) + geom_point()
+
+p2 <- ggplot(mpg, aes(x = displ, y = hwy, shape = class)) + geom_point()
+
+p1/p2
+
 ```
 
 When `class` is mapped to `shape`, we get two warnings:
@@ -131,7 +158,7 @@ You'll need to pick a value that makes sense for that aesthetic:
 -   The shape of a point as a number, e.g, `shape = 1`, as shown in @fig-shapes.
 
 ```{r}
-#| label: fig-shape
+#| label: fig-shapes
 #| echo: false
 #| warning: false
 #| fig.asp: 0.364
@@ -208,30 +235,21 @@ In the next section we dive deeper into geoms.
 
 3.  What does the `stroke` aesthetic do? What shapes does it work with? (Hint: use `?geom_point`)
 
-```{r, hint2}
-shapes <- data.frame(
-  shape = c(0:19, 20, 21, 22, 23, 24),
-  x = 0:24 %/% 5,
-  y = -(0:24 %% 5)
-)
-ggplot(shapes, aes(x, y)) + 
-  geom_point(aes(shape = shape), size = 5, fill = "red") +
-  geom_text(aes(label = shape), hjust = 0, nudge_x = 0.15) +
-  scale_shape_identity() +
-  expand_limits(x = 4.1) +
-  theme_void()
+Ans: 2.2.1.3:
+
+4.  What happens if you map an aesthetic to something other than a variable name, like `aes(color = displ < 5)`? Try it by adding color to the following plot. 
+
+```{r}
+ ggplot(mpg) + 
+      geom_point(aes(x = displ, y = hwy))
 ```
-
-
-
-4.  What happens if you map an aesthetic to something other than a variable name, like `aes(color = displ < 5)`? Try it. Note, you'll also need to specify x and y.
 
 
 ```{r Ans: 2.2.1.4}
 
 ```
 
-## Geometric objects {-}
+## Geometric objects 
 
 How are these two plots similar?
 
@@ -291,8 +309,7 @@ ggplot(mpg, aes(x = displ, y = hwy, shape = drv)) +
   geom_smooth()
 
 # Bottom
-ggplot(mpg, aes(x = displ, y = hwy, linetype = drv)) + 
-  geom_smooth()
+ggplot(mpg, aes(x = displ, y = hwy, linetype = drv)) + geom_smooth()
 ```
 
 Here, `geom_smooth()` separates the cars into three lines based on their `drv` value, which describes a car's drive train. One line describes all of the points that have a `4` value, one line describes all of the points that have an `f` value, and one line describes all of the points that have an `r` value. Here, `4` stands for four-wheel drive, `f` for front-wheel drive, and `r` for rear-wheel drive.
@@ -412,7 +429,7 @@ To learn more about any single geom, use the help (e.g., `?geom_smooth`).
 
 Ans: 2.3.1.1a:
 
-Use the following ggplot to create 4 plots, `geom_line()`, `geom_boxplot()`, `geom_histogram()` and `geom_area()`.
+Use the following ggplot to create 4 plots, `geom_line()`, `geom_boxplot()`, `geom_point()` and `geom_area()`. Include a title specifying the geometry for each.
 
 
 ```{r Ans: 2.3.1.1}
@@ -442,7 +459,7 @@ p <- ggplot(df, aes(x, y, label = label))
     
 What does `show.legend = FALSE` do here?
 What happens if you remove it?
-Rerun the plot with `show-legend = TRUE`
+Try it.
 
 
 ```{r Ans: 2.3.1.2}
@@ -455,7 +472,7 @@ Rerun the plot with `show-legend = TRUE`
 
 Ans: 2.3.1.3:
 
-4.  Recreate the R code necessary to generate and save the following graphs, and arrange them in a figure. Note that wherever a categorical variable is used in the plot, it's `drv`.
+4.  Recreate the R code necessary to generate and save the following graphs, and arrange them in a figure in 3 columns. Note that wherever a categorical variable is used in the plot, it's `drv`. Use the mathematical notation in one, and the function from `patchwork`, `plot_layout` in another for laying out the plot.
 
 ```{r}
 #| fig-alt: |
@@ -496,7 +513,6 @@ Ans: 2.3.1.3:
 
 The code for each of the plots is given below.
 
-<div class="fold s">
 
 ```{r, Ans: 2.3.1.4}
 
@@ -504,12 +520,12 @@ The code for each of the plots is given below.
 
 
 
-## Facets {-}
+## Facets 
 
 Another way, which is particularly useful for categorical variables, is to split your plot into **facets**, subplots that each display one subset of the data.
 
 To facet your plot by a single variable, use `facet_wrap()`.
-The first argument of `facet_wrap()` is a formula[^3], which you create with `~` followed by a variable name.
+The first argument of `facet_wrap()` is a formula, which you create with `~` followed by a variable name.
 The variable that you pass to `facet_wrap()` should be categorical.
 
 Here "formula" is the name of the thing created by `~`, not a synonym for "equation".
@@ -559,6 +575,20 @@ ggplot(mpg, aes(x = displ, y = hwy)) +
   geom_point() + 
   facet_grid(drv ~ cyl, scales = "free_y")
 ```
+
+
+Modifying facet label appearance:
+
+```{r}
+
+ggplot(mpg, aes(x = displ, y = hwy)) + 
+  geom_point() + 
+  facet_grid(drv ~ cyl) +
+  theme(strip.text.x = element_text(size=12, face="bold",colour="blue",angle=75),strip.text.y = element_text(size=14, face="bold",colour="red"),
+  strip.background = element_rect(colour="navy", fill="#CCCCFF", linewidth  = 2))
+```
+
+
 
 ## 2.4.1 Exercises {.unnumbered}
 
@@ -632,7 +662,7 @@ What if you were interested in a specific class, e.g. compact cars? How would hi
 ```{r Ans: 2.4.1.4b}
 
 ```
-</div>
+
 
 5.  Read `?facet_wrap`. What does `nrow` do? What does `ncol` do? What other options control the layout of the individual panels? Why doesn't `facet_grid()` have `nrow` and `ncol` arguments?
 
@@ -669,7 +699,7 @@ ggplot(mpg) +
 
 ```
 
-## Statistical transformations {-}
+## Statistical transformations 
 
 Consider a basic bar chart, drawn with `geom_bar()` or `geom_col()`.
 The following chart displays the total number of diamonds in the `diamonds` dataset, grouped by `cut`.
@@ -836,7 +866,7 @@ Replot the two plots below using `group = 1`.
 ```
 
 
-## Position adjustments {-}
+## Position adjustments 
 
 There's one more piece of magic associated with bar charts.
 You can color a bar chart using either the `color` aesthetic, or, more usefully, the `fill` aesthetic:
@@ -985,7 +1015,7 @@ Ans: 2.6.1.1:
     ggplot(mpg, aes(x = displ, y = hwy)) +
       geom_point() + 
     ggplot(mpg, aes(x = displ, y = hwy)) +
-      geom_point(position = "identity") +            plot_layout(ncol = 2)
+      geom_point(position = "identity")         
 ```
 
 Ans: 2.6.1.2:
@@ -1013,10 +1043,10 @@ Ans: 2.6.1.3:
 ```
 
 
-5.  What's the default position adjustment for `geom_boxplot()`? Create a visualization of the `mpg` dataset that demonstrates it by adding different positions using the following ggplot:
+5.  What's the default position adjustment for `geom_boxplot()`? Create a visualization of the `mpg` dataset that demonstrates it by adding the default position using the following ggplot:
 
 ```{r}
-g <- ggplot(mpg, aes(x = cty, y = displ)) 
+g <- ggplot(data = mpg, mapping = aes(x = manufacturer, y = hwy, color = manufacturer)) 
 ```
 
 
@@ -1030,7 +1060,7 @@ g <- ggplot(mpg, aes(x = cty, y = displ))
 ```
 
 
-## Grammar of graphics {-}
+## Grammar of graphics 
 
 We can expand on the graphing template you learned in @sec-ggplot2-calls by adding position adjustments, stats, coordinate systems, and faceting:
 
@@ -1081,7 +1111,7 @@ In other words, you can use the code template that you've learned in this chapte
 
 If you'd like to learn more about the theoretical underpinnings of ggplot2, you might enjoy reading "[The Layered Grammar of Graphics](https://vita.had.co.nz/papers/layered-grammar.pdf)", the scientific paper that describes the theory of ggplot2 in detail.
 
-## Summary {-}
+## Summary 
 
 In this chapter you learned about the layered grammar of graphics starting with aesthetics and geometries to build a simple plot, facets for splitting the plot into subsets, statistics for understanding how geoms are calculated, position adjustments for controlling the fine details of position when geoms might otherwise overlap, and coordinate systems which allow you to fundamentally change what `x` and `y` mean.
 One layer we have not yet touched on is theme, which we will introduce in @sec-themes.
